# visitor-rk2

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: ConcreteElementA.h  ConcreteElementB.h  ConcreteElementC.h  ConcreteVisitor.h  IElement.h  IElementVisitor.h
src/: ConcreteElementA.cpp  ConcreteElementB.cpp  ConcreteElementC.cpp  ConcreteVisitor.cpp  main.cpp
tests/: CMakeLists.txt  test_elements.cpp  test_visitor.cpp  unit_tests.cpp
